Removed the exe file prefix and changed executable write location to working directory

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "-pthread",
                 "-fopenmp",
                 "-o",
-                "${fileDirname}/copangraph.exe",
+                "${workspaceFolder}/copan",
                 "--verbose",
                 "-O0"
             ],
