--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "C/C++: g++ build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}/copangraph.exe",
+            "program": "${workspaceFolder}/copan",
             "args": [
             ],
             "stopAtEntry": false,
