restoring compilation changes

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 # enter all config in 'key = value' format
 app_name = pg_collapse_algo
 log_file_dir = logs # path relative to the executable
-sample_list = /home/nat/Documents/GitHub/data/sample_5_megahit_20M.pe_ext_all.fasta # contig fasta list
+sample_list = /home/izaak/scratch/pg_collapse_algorithm_cpp/testing/sample_5_megahit_20M.pe_ext_all.small.fasta # contig fasta list
 graph_pref = demo # name of graph prefix
 output_dir = /home/nat/Documents/GitHub/data/output
 divergence_threshold = 0.02
